crates/keron-lang/tests/corpus/errors/check/fn_missing_required_arg.keron
fn add(a: Int, b: Int): Int { a + b }
val x: Int = add(1)
